# vipe-rs

./: .justfile  Cargo.toml  Makefile  README.md  dist-workspace.toml  install_script.sh  plan-dist-manifest.json
.github/workflows/: release.yml
src/: lib.rs  main.rs
wix/: main.wxs
