[package]
name = "vipe-rs"
version = "0.0.7"
edition = "2021"
authors = ["@RandyMcMillan <randy.lee.mcmillan@gmail.com>"]
description = "Edit piped input in your editor"
repository = "https://github.com/randymcmillan/vipe-rs"
homepage = "https://github.com/randymcmillan/vipe-rs"
license = "MIT OR Apache-2.0"
keywords = ["editor", "pipe", "stdin", "temporary"]

[[bin]]
name = "vipe"
path = "src/main.rs"

[dependencies]
atty = "0.2.14"
rand = "0.9.1"
rand_core = "0.9.3"
tempfile = "3.20.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
